# weather-data

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: adapters.py  cli.py  drivers.py  entities.py  exceptions.py  gateways.py  interactors.py  main.py
app/sql/: weather_create_table.sql  weather_get_average_since.sql  weather_get_between.sql  weather_get_latest.sql  weather_insert.sql
data/may/01/: meteo-0002.json  meteo-0007.json  meteo-0012.json  meteo-0017.json  meteo-0022.json  meteo-0027.json  meteo-0032.json  meteo-0037.json  meteo-0042.json  meteo-0047.json  meteo-0052.json  meteo-0057.json  meteo-0102.json  meteo-0107.json  meteo-0112.json  meteo-0117.json  meteo-0122.json  meteo-0127.json  meteo-0132.json  meteo-0137.json  meteo-0142.json  meteo-0147.json  meteo-0152.json  meteo-0157.json  meteo-0202.json  meteo-0207.json  meteo-0212.json  meteo-0217.json  meteo-0222.json  meteo-0227.json  meteo-0232.json  meteo-0237.json  meteo-0242.json  meteo-0247.json  meteo-0252.json  meteo-0257.json  meteo-0302.json  meteo-0307.json  meteo-0312.json  meteo-0317.json  (+248 more)
data/may/02/: meteo-0002.json  meteo-0007.json  meteo-0012.json  meteo-0017.json  meteo-0022.json  meteo-0027.json  meteo-0032.json  meteo-0037.json  meteo-0042.json  meteo-0047.json  meteo-0052.json  meteo-0057.json  meteo-0102.json  meteo-0107.json  meteo-0112.json  meteo-0117.json  meteo-0122.json  (+270 more)
docs/: architecture.drawio
scripts/: build.sh  clean.sh  format.sh  reset_dev_db.sh  serve.sh  test.sh
tests/: conftest.py  test_auth.py  test_fastapi_app.py  test_weather_interactor.py
(+3267 files in other folders)
